[docs] update start backend docs